restored class from merge